# alpha_parser

./: LICENSE  README.md  app.py  build_linux.sh  setup.py  test_data_generator.py
alpha_parser/: CMakeCache.txt  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  __init__.py  alpha_functions.cpp  alpha_lexer.py  alpha_parser.py  alpha_tokens.py  benchmark_alpha_parser  cmake_install.cmake  lexer.py  libalpha_parser.dylib  matrix_test  parser.py  setup.py  test_alpha_parser  test_alphas.py  tokens.py
alpha_parser/alpha_parser/: parser.py
alpha_parser/include/: alpha_lexer.hpp  alpha_parser.hpp  alpha_tokens.hpp
alpha_parser/src/: alpha_lexer.cpp  alpha_parser.cpp  c_interface.cpp
alpha_parser/test/: benchmark_alpha.cpp  matrix_test.cpp  test_alpha.cpp
alpha_parser/tests/: test_alpha_parser.py  test_lexer.py  test_parser.py
examples/: alpha_backtest.py
templates/: index.html
tests/: print_test_data.py  test_alphas.py  test_interactive.py
tests/alpha_parser/: test_alpha_parser.py
